add photo endpoint
